kubernetes/task-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: task-service
spec:
  type: NodePort
  selector:
    app: task-service
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
