kubernetes/task-service-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-service
spec:
  ingressClassName: traefik
  rules:
    - host: task.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: task-service
                port:
                  number: 8080
